# rust-xtensa

./: README.md
src/bootstrap/: cc_detect.rs
src/librustc_driver/: Cargo.toml  lib.rs
src/librustc_driver_static/: Cargo.toml
src/librustc_target/spec/: mod.rs  xtensa_esp32_none_elf.rs  xtensa_esp8266_none_elf.rs
