[package]
authors = ["The Rust Project Developers"]
name = "rustc_driver"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_driver"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
rustc_driver_static = { path = "../librustc_driver_static" }

[features]
llvm = ['rustc_driver_static/llvm']
